--- a/MA.Web/mobile/css/reset.css
+++ b/MA.Web/mobile/css/reset.css
@@ -1,4 +1,4 @@
-/*
+﻿/*
  * HTML5 ✰ Boilerplate
  *
  * What follows is the result of much research on cross-browser styling.
@@ -242,7 +242,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
 
 
 
-/* ==|== non-semantic helper classes ========================================
+/* ==|== non-semantic Helper classes ========================================
    Please define your styles before this section.
    ========================================================================== */
 
