--- a/MA.Web/public/templates/template_menuShopRosso.html
+++ b/MA.Web/public/templates/template_menuShopRosso.html
@@ -1,1 +1,5 @@
-<li><a href="http://localhost:11410/materarredamenti.it/shop/Complementi.html">Complementi</a></li><li><a href="http://localhost:11410/materarredamenti.it/shop/Sedute-e-Tavolini.html">Sedute e Tavolini</a></li><li><a href="http://localhost:11410/materarredamenti.it/shop/Lampade.html">Lampade</a></li><li><a href="http://localhost:11410/materarredamenti.it/shop/Materassi.html">Materassi</a></li><li><a href="http://localhost:11410/materarredamenti.it/shop/Tessile-e-Stampe.html">Tessile e Stampe</a></li>
+<li><a href="http://localhost:27596/shop/Catalogo/Complementi">Complementi</a></li>
+<li><a href="/shop/Catalogo/Arredi">Arredi</a></li>
+<li><a href="/shop/Catalogo/IdeeRegalo">IdeeRegalo</a></li>
+<li><a href="/shop/Catalogo/Materassi">Materassi</a></li>
+<li><a href="/shop/Catalogo/Originali">Originali</a></li>
