--- a/MA.Web/public/templates/template_menuShopRosso.html
+++ b/MA.Web/public/templates/template_menuShopRosso.html
@@ -1,4 +1,4 @@
-<li><a href="http://localhost:27596/shop/Catalogo/Complementi">Complementi</a></li>
+<li><a href="/shop/Catalogo/Complementi">Complementi</a></li>
 <li><a href="/shop/Catalogo/Arredi">Arredi</a></li>
 <li><a href="/shop/Catalogo/IdeeRegalo">IdeeRegalo</a></li>
 <li><a href="/shop/Catalogo/Materassi">Materassi</a></li>
