--- a/MA.Web/public/templates/template_menuShopRosso.html
+++ b/MA.Web/public/templates/template_menuShopRosso.html
@@ -2,4 +2,4 @@
 <li><a href="/shop/Catalogo/Arredi">Arredi</a></li>
 <li><a href="/shop/Catalogo/IdeeRegalo">IdeeRegalo</a></li>
 <li><a href="/shop/Catalogo/Materassi">Materassi</a></li>
-<li><a href="/shop/Catalogo/Originali">Originali</a></li>
+<li><a href="/shop/Catalogo/Maioliche">Maioliche</a></li>
