--- a/MA.Web/shop/css/style.css
+++ b/MA.Web/shop/css/style.css
@@ -102,7 +102,7 @@ img::-moz-selection {background: transparent;}*/
 /*-------------------------------------------------------*/
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Crimson Text',arial,serif;
-    font-weight: normal;
+    font-weight: bold;
     font-variant: normal;
     white-space: normal;
     color: #464646;
@@ -125,8 +125,8 @@ h3 {
 }
 
 h4 {
-    font-size: 26px;
-    line-height: 25px;
+    font-size: 2em;
+    line-height: 1.8em;
 }
 
 h5 {
@@ -477,7 +477,6 @@ a#logo {
 }
 
 .carrello_titolo {
-   
     background: transparent url("../images/logo-carrello.png") no-repeat;
     position: relative;
     height: 40px;
@@ -3298,4 +3297,19 @@ a.portfolio-item-preview {
     padding: 4px 9px;
     margin-right: 7px;
     border: 1px solid #efefef;
+}
+
+.banner-tradizione-logo {
+    background: transparent url('../images/logo-tradizione.png') no-repeat;
+    display: block;
+    float: left;
+    width: 220px;
+    height: 70px;
+    text-indent: -9999px;
+}
+
+.dettaglio-prodotto {
+    width: 400px;
+    font-size: 1.15em;
+    line-height: 1.6em;
 }
