--- a/MA.Web/Design/css/style.css
+++ b/MA.Web/Design/css/style.css
@@ -1380,9 +1380,9 @@ a.nivo-prevNav {
     float: left;
     background: #f5f5f5;
     line-height: 20px;
-    border-top: 1px solid #ebebeb;
+    /*border-top: 1px solid #ebebeb;*/
     border-bottom: 1px solid #FFF;
-    margin: 5px auto 0 0px;
+    /*margin: 5px auto 0 0px;*/
     text-shadow: 0px 1px 0px #FFF;
 }
 
