--- a/MA.Web/Design/css/style.css
+++ b/MA.Web/Design/css/style.css
@@ -112,6 +112,8 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     font-size: 34px;
     line-height: 38px;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
 h2 {
@@ -356,6 +358,7 @@ form.inline {
     text-align: left;
     margin-top: 0;
     margin-bottom: 50px;
+    border-top: 1px solid #f5f5f5;
 }
 
 .center {
@@ -3343,7 +3346,7 @@ a.portfolio-item-preview {
 }
 
 .dettaglio-prodotto {
-    width: 400px;
+    width: 488px;
     font-size: 1.15em;
     line-height: 1.6em;
 }
