--- a/MA.Web/Design/Default_r.master
+++ b/MA.Web/Design/Default_r.master
@@ -1,5 +1,8 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="Default_r.master.cs" Inherits="_Default_r" %>
 
+<%@ Register Src="~/Design/UserControls/UCShopMenu.ascx" TagPrefix="uc1" TagName="UCShopMenu" %>
+
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
@@ -11,9 +14,8 @@
     <meta name="Author" content="Giovanni Matera" />
     <meta name="language" content="italian" />
     <meta name="robots" content="index,follow" />
-    <asp:Literal runat="server" ID="ltrMetaFB"></asp:Literal>
     <!--CSS FILES STARTS-->
-    <link rel="shortcut icon" type="image/gif" href="images/favicon.png" />
+
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="../css/prettyPhoto.css" type="text/css" media="screen" />
     <link href="../css/slider.css" rel="stylesheet" type="text/css" />
@@ -23,20 +25,12 @@
     <link href="../css/delicious/stylesheet.css" rel="stylesheet" type="text/css" />
     <!--CSS FILES ENDS-->
 
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/custom.js"></script>
-    <script type="text/javascript" src="js/jqueryTools/jquery.tools.min.html"></script>
-    <script type="text/javascript" src="js/slides/slides.min.jquery.js"></script>
-    <script type="text/javascript" src="js/cycle-slider/cycle.js"></script>
-    <script type="text/javascript" src="js/nivo-slider/jquery.nivo.slider.js"></script>
-    <script type="text/javascript" src="js/tabify/jquery.tabify.js"></script>
-    <script type="text/javascript" src="js/prettyPhoto/jquery.prettyPhoto.js"></script>
-    <script type="text/javascript" src="js/twitter/jquery.tweet.js"></script>
-    <script type="text/javascript" src="js/scrolltop/scrolltopcontrol.js"></script>
-    <script type="text/javascript" src="js/portfolio/filterable.js"></script>
-    <script type="text/javascript" src="js/modernizr/modernizr-2.0.3.js"></script>
-    <script type="text/javascript" src="js/easing/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="js/kwicks/jquery.kwicks-1.5.1.pack.js"></script>
+    <script type="text/javascript" src="../js/jquery.min.js"></script>
+    <script type="text/javascript" src="../js/custom.js"></script>
+    <script type="text/javascript" src="../js/slides.min.jquery.js"></script>
+    <script type="text/javascript" src="../js/cycle.js"></script>
+    <script type="text/javascript" src="../js/jquery.prettyPhoto.js"></script>
+    <script type="text/javascript" src="../js/scrolltopcontrol.js"></script>
 
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -53,78 +47,83 @@
         pageTracker._trackPageview();
     } catch (err) { }</script>
 
-<body onload="load()">
+<body>
     <form id="form1" runat="server">
         <div id="wrapper">
             <div class="center">
                 <p class="header-text-left">
-                    T: +39 821 39 36 E: shop@materarredamenti.it
                 </p>
                 <ul id="header-icons">
-                    <li><a href="Customers/Default.aspx">Account Info</a></li>
-                    <li><a href="Customers/Ordini.aspx">Ordini</a></li>
+                    <li><a href="Customers/Ordini.aspx">Stato Ordini</a></li>
                     <asp:LoginView ID="loginView1" runat="server">
                         <LoggedInTemplate>
                             <li>
-                                <asp:LoginName CssClass="colored" runat="server" ID="loginName" FormatString="{0}" />
+                                <li><a href="Customers/Default.aspx">Account Info</a></li>
+                            </li>
+                            <li>&nbsp; | &nbsp;
+                                <asp:LoginName CssClass="colored red" runat="server" ID="loginName" FormatString="{0}" />
+                            </li>
+                            <li>
                                 <asp:LoginStatus Style="float: right; margin-left: 10px;" runat="server" ID="logStatus"
-                                    LoginText="Login" LogoutText="Logout" LogoutPageUrl="~/Design/Catalogo.aspx" CssClass="loginsubmit" />
+                                    LoginText="Accedi" LogoutText="Esci" LogoutPageUrl="~/Design/Catalogo.aspx" CssClass="loginsubmit" />
                             </li>
                         </LoggedInTemplate>
                         <AnonymousTemplate>
-                            <li><a href="Accedi.aspx">Accedi</a></li>
+                            <li><a href="Accedi.aspx">Accedi / Registrati</a></li>
                         </AnonymousTemplate>
                     </asp:LoginView>
                 </ul>
                 <div id="container">
                     <div id="header-logo">
-                        <img alt="" src="images/Header_Logo_grafica.png"/>
+                        <img alt="" src="<%= Page.ResolveClientUrl("images") %>/Header_Logo_grafica.png" />
                     </div>
                     <div id="header">
-                        <%--  <a id="logo_r" class="logoRosso" title="Homepage" href="/shop"></a>--%>
                         <div id="main_navigation" class="main-menu">
+                            <uc1:UCShopMenu runat="server" ID="UCShopMenu" />
                             <asp:ContentPlaceHolder ID="cphMenu" runat="server">
                             </asp:ContentPlaceHolder>
                         </div>
-
                     </div>
                     <div id="content">
                         <asp:ContentPlaceHolder ID="ContentPlaceHolderWrapper" runat="server">
                         </asp:ContentPlaceHolder>
-                        <img alt="" src="images/immagine-pre-footer.png"/>
+                        <img alt="" src="<%= Page.ResolveClientUrl("images") %>/immagine-pre-footer.png" />
                         <div id="footer-wrapper">
                             <div id="footer-container">
-                                <div id="footer">                                 
+                                <div id="footer">
                                     <div class="one">
-                                        <div style="margin-left: 30px; margin-right: 10px;" class="one-fourth">
-                                            <strong>Metodi di Pagamento</strong>
-                                            <img src="images/pagamenti.png" />
+                                          <div style="margin-left: 30px; margin-right: 10px;" class="one-fourth">
+                                            <strong style="padding-left: 10px;">Design</strong>
+                                             <ul class="simple-nav">
+                                                <li><a href="Catalogo/Complementi">Complementi</a></li>
+                                                <li><a href="Catalogo/Arredi">Arredi</a></li>
+                                                <li><a href="Catalogo.aspx/Idee-Regalo">Idee Regalo</a></li>
+                                                 <li><a href="Catalogo/Materassi">Materassi</a></li>
+                                                <li><a href="Catalogo/Maioliche">Maioliche</a></li>
+                                            </ul>
                                         </div>
                                         <div style="margin-right: 10px;" class="one-fourth">
-                                            <strong style="padding-left: 10px;">Termini e condizioni</strong>
+                                            <strong style="padding-left: 10px;">Shop Online</strong>
                                             <ul class="simple-nav">
-                                                <li><a href="#">Shop Design</a></li>
-                                                <li><a href="#">Shop Tradizione</a></li>
                                                 <li><a href="#">Pagamenti</a></li>
                                                 <li><a href="#">Spedizioni</a></li>
+                                                <li><a href="#">Punto Vendita</a></li>
+                                                <li><a href="www.materarredamenti.it/newsletter.aspx">Newsletter</a></li>
                                             </ul>
                                         </div>
                                         <div style="margin-right: 10px;" class="one-fourth">
                                             <strong style="padding-left: 10px;">Contatti</strong>
                                             <ul style="padding-left: 10px;" id="footer-info">
-                                                <li>A: Via Selva S. Vito, 23 - Laterza (TA)</li>
-                                                <li>T: + 39 099 82 16 774</li>
-                                                <li>C: +39 338 49 01 627 </li>
-                                                <li>E: <a href="#">info@materarredamenti.it</a></li>
-                                                <li>E-2: <a href="#">shop@materarredamenti.it</a></li>
+                                                <li>Via Selva S. Vito, 23 - Laterza (TA)</li>
+                                                <li>Tel.  + 39 099 82 16 774</li>
+                                                <li>Cell. + 39 338 49 01 627 </li>
+                                                <li><a href="#">shop@materarredamenti.it</a></li>
+                                                <li><a href="#">info@materarredamenti.it</a></li>
                                             </ul>
                                         </div>
                                         <div class="one-fourth last">
-                                            <strong style="padding-left: 10px;">Dove Siamo</strong>
-                                            <div id="Gmap__" style="width: 215px; height: 150px">
-                                                <iframe width="215" height="150" frameborder="0" scrolling="no" marginheight="0"
-                                                    marginwidth="0" src="http://maps.google.it/maps?f=q&amp;source=s_q&amp;hl=it&amp;geocode=&amp;q=laterza+via+selva+san+vito+23&amp;aq=&amp;sll=40.354131,18.174294&amp;sspn=0.107007,0.222988&amp;ie=UTF8&amp;hq=laterza+via+selva+san+vito+23&amp;hnear=&amp;radius=15000&amp;t=m&amp;ll=40.619624,16.808159&amp;spn=0.071946,0.071946&amp;output=embed"></iframe>
-                                            </div>
+                                            <strong style="padding-left: 10px;">Metodi di Pagamento</strong>
+                                             <img src="<%= Page.ResolveClientUrl("images") %>/pagamenti.png" alt="" />
                                         </div>
                                     </div>
                                 </div>
@@ -136,7 +135,7 @@
                         </div>
                     </div>
                 </div>
-            </div>    
+            </div>
         </div>
     </form>
 </body>
